# scoreboard

./: .gitignore  Cargo.toml  README.md  scoreboard.rs
docs/: crates.js  help.html  index.html  search-index.js  settings.html  source-files.js
docs/example/: all.html  fn.main.html  index.html
docs/implementors/core/clone/: trait.Clone.js
docs/implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
docs/implementors/core/default/: trait.Default.js
docs/implementors/core/fmt/: trait.Debug.js  trait.Display.js
docs/implementors/core/hash/: trait.Hash.js
docs/implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
docs/implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
docs/implementors/core/str/traits/: trait.FromStr.js
docs/log/: enum.Level.html  enum.LevelFilter.html  fn.set_logger.html  fn.set_logger_racy.html  index.html  struct.Metadata.html  struct.MetadataBuilder.html  struct.ParseLevelError.html  struct.Record.html  struct.RecordBuilder.html  struct.SetLoggerError.html  trait.Log.html
docs/scoreboard/: all.html  index.html  struct.ScoreBoard.html
docs/scoreboard_world_cup/: all.html  index.html  sidebar-items.js  struct.ScoreBoard.html
docs/src/example/: example.rs.html
docs/src/log/: __private_api.rs.html  lib.rs.html  macros.rs.html
docs/src/scoreboard/: lib.rs.html
docs/src/scoreboard_world_cup/: lib.rs.html
src/: lib.rs
